@@ -1,40 +1,43 @@
 package com.inkmelo.book;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
 
 @Service
 public class BookService {
 
-	private BookRepository repository;
-
-	public BookService(BookRepository repository) {
+	private final BookRepository repository;
+	private final BookMappingService mappingService;
+	
+	
+	
+	public BookService(BookRepository repository, BookMappingService mappingService) {
+		super();
 		this.repository = repository;
+		this.mappingService = mappingService;
 	}
 
-	public List<BookResponseDTO> findAllBooks() {
-		return repository.findAll()
+	public List<BookResponseDTO> findAllBookByStatus(BookStatus status) {
+		return repository.findAllByStatus(status)
 				.stream()
-				.filter(book -> book.getStatus() == BookStatus.ACTIVE)
-				.map(book -> BookResponseDTO.builder()
-						.author(book.getAuthor())
-						.ISBN(book.getISBN())
-						.build())
-				.collect(Collectors.toList());
+				.map(book -> mappingService.bookToBookResponseDTO(book))
+				.toList();
 	}
 	
-	 public List<BookResponseDTO> findBooksByKeyword(String keywordRequest) {
-	        String keyword = keywordRequest.toLowerCase();
-	        return repository.findAll()
-	                .stream()
-	                .filter(book -> book.getStatus() == BookStatus.ACTIVE)
-	                .filter(book -> book.getAuthor().toLowerCase().contains(keyword) || book.getISBN().contains(keyword))
-	                .map(book -> BookResponseDTO.builder()
-	                        .author(book.getAuthor())
-	                        .ISBN(book.getISBN())
-	                        .build())
-	                .collect(Collectors.toList());
-	    }
+	public List<BookAdminResponseDTO> findAllBook() {
+		return repository.findAll()
+				.stream()
+				.map(book -> mappingService.bookToBookAdminResponseDTO(book))
+				.toList();
 	}
+	
+	public List<BookResponseDTO> searchBook(String keyword){
+		return repository.findByAuthorContainingIgnoreCaseOrTitleContainingIgnoreCase(keyword, keyword)
+				.stream()
+				.map(book -> mappingService.bookToBookResponseDTO(book))
+				.toList();
+
+    }
+	
+}
+
